--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>uk.bh96.yamm.backend</groupId>
+    <groupId>io.yamm.backend</groupId>
     <artifactId>yamm</artifactId>
     <version>0.1-ALPHA</version>
     <properties>
