--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,18 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 # END JETBRAINS GITIGNORE
+
+# START MAVERN GITIGNORE
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+# END MAVERN GITIGNORE
