--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.yamm.backend</groupId>
     <artifactId>yamm</artifactId>
-    <version>0.1-ALPHA.4</version>
+    <version>0.1-alpha.5</version>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
