--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>1.58</version>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20170516</version>
+        </dependency>
+        <dependency>
             <groupId>org.jasypt</groupId>
             <artifactId>jasypt</artifactId>
             <version>1.9.2</version>
@@ -56,7 +61,7 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Class-Path>bcprov-jdk15on.jar</Class-Path>
-                                        <Main-Class>io.yamm.utils.GUI</Main-Class>
+                                        <Main-Class>io.yamm.client.GUI</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
