--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.yamm.backend</groupId>
     <artifactId>yamm</artifactId>
-    <version>0.1-alpha.5</version>
+    <version>0.1-alpha.7</version>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -17,6 +17,11 @@
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
             <version>1.4.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.neovisionaries</groupId>
+            <artifactId>nv-i18n</artifactId>
+            <version>1.22</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
@@ -60,7 +65,7 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Class-Path>bcprov-jdk15on.jar</Class-Path>
+                                        <Class-Path>bcprov-jdk15on-1.58.jar</Class-Path>
                                         <Main-Class>io.yamm.client.GUI</Main-Class>
                                     </manifestEntries>
                                 </transformer>
